...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="view_scroll" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns_cloud_formation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
                android:gravity="start"
                android:textDirection="locale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_how_to_connect_3" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_identity_pool_id"
                style="@style/CloudFormationEditText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:hint="@string/enter_identity_pool_id"
                android:paddingHorizontal="@dimen/dp_16"
...
                android:textDirection="locale"
                android:text="@string/user_domain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_identity_pool_id" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_user_domain"
                style="@style/CloudFormationEditText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:hint="@string/enter_user_domain"
                android:paddingHorizontal="@dimen/dp_16"
...
                android:gravity="start"
                android:textDirection="locale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_user_domain" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_user_pool_client_id"
                style="@style/CloudFormationEditText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:hint="@string/enter_user_pool_client_id"
                android:paddingHorizontal="@dimen/dp_16"
...
                android:gravity="start"
                android:textDirection="locale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_user_pool_client_id" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_user_pool_id"
                style="@style/CloudFormationEditText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:hint="@string/enter_user_pool_id"
                android:paddingHorizontal="@dimen/dp_16"
...
                android:textDirection="locale"
                android:text="@string/label_web_socket_url"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_user_pool_id" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_web_socket_url"
                style="@style/CloudFormationEditText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:hint="@string/label_enter_web_socket_url_1"
                android:paddingHorizontal="@dimen/dp_16"
...
                android:textColor="@color/color_medium_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_web_socket_url" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_connect"
                style="@style/SigInHintTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginVertical="@dimen/dp_24"
                android:alpha="0.4"
                android:background="@drawable/sign_in_bg_1"
...
                android:id="@+id/btn_sign_in"
                style="@style/SigInHintTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginVertical="@dimen/dp_24"
                android:background="@drawable/sign_in_bg_1"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:id="@+id/btn_logout"
                style="@style/SigInHintTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginVertical="@dimen/dp_24"
                android:background="@drawable/navigation_exit"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:id="@+id/btn_disconnect"
                style="@style/SigInHintTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_24"
                android:background="@drawable/navigation_exit"
                android:text="@string/disconnect_aws"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
