...
        android:id="@+id/menu_tracking"
        android:icon="@drawable/ic_tracking"
        android:title="@string/menu_tracking" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_more" />
</menu>
